[tool.poetry]
name = "qmps"
version = "0.1.0"
description = ""
authors = ["Fergus Barratt <fergus.barratt00@gmail.com>"]

[tool.poetry.dependencies]
xmps = {git = "https://github.com/fergusbarratt/xmps.git"}
python = ">=3.8, <3.10"
numpy = "^1.20.3"
scipy = "^1.6.3"
black = "^21.6b0"
pytest = "^6.2.4"
tqdm = "^4.61.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
